# Fierro

scripts/: setup-env.sh
testing/: CMakeLists.txt
testing/scripts/: build-fierro.sh  cmake_build.sh  setup-env.sh
testing/src/: CMakeLists.txt  driver.h  main.cpp  solver.cpp  solver.h
testing/src/Explicit-Lagrange-Kokkos/SGH_solver/: CMakeLists.txt
testing/src/Explicit-Lagrange-Kokkos/SGH_solver/include/: sgh_solver.h
testing/src/Explicit-Lagrange-Kokkos/SGH_solver/src/: boundary.cpp  eos.cpp  force_sgh.cpp  outputs.cpp  properties.cpp  sgh_solve.cpp  user_mat.cpp  user_mat_init.cpp
testing/src/Simulation_Parameters/: FEA_Module_Parameters.h  Fields.h  Loading_Conditions.h  Region.h  SGH_Parameters.h  Simulation_Parameters.h  Simulation_Parameters_Explicit.h
testing/src/Solvers/SGH_solver/: CMakeLists.txt
testing/src/Solvers/SGH_solver/include/: sgh_solver.h
testing/src/Solvers/SGH_solver/src/: boundary.cpp  driver.cpp  energy_sgh.cpp  eos.cpp  geometry.cpp  input.cpp  momentum.cpp  setup.cpp  sgh_solver.cpp  time_integration.cpp  user_mat.cpp  user_mat_init.cpp
testing/src/common/: io_utils.h  state.h
